Fix blockquote letter spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -95,7 +95,7 @@
         // padding-left: $spacing-unit / 2;
         padding: 19px;
         font-size: 16px;
-        letter-spacing: -1px;
+        letter-spacing: 0px;
         font-style: italic;
 
         > :last-child {
